po: update po/fr_CA/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/contribute.po
+++ b/po/fr_CA/contribute.po
@@ -13,14 +13,15 @@
 # rmps <rmpsante@gmail.com>, 2014
 # samuelsov <samuel@koumbit.org>, 2015
 # samuelsov <samuel@koumbit.org>, 2011-2012
+# samuelsov <samuel@koumbit.org>, 2015
 # Stéphane Lussier <stephane@symbiotic.coop>, 2016
 # Julien Larocque-Dupont <transifex@s.quebec-hebergement.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-13 17:41+0000\n"
-"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
+"PO-Revision-Date: 2016-08-29 16:58+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -326,7 +327,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Recurring Installments?"
-msgstr ""
+msgstr "Prélèvements périodiques ?"
 
 #: CRM/Contribute/DAO/ContributionPage.php CRM/Contribute/Selector/Search.php
 #: templates/CRM/Contribute/Form/Contribution.tpl
@@ -663,7 +664,7 @@ msgstr "Le paiement de don pour %1 a été mis à jour."
 msgid ""
 "You will need to configure the %1 settings for your Payment Processor before"
 " you can submit a credit card transactions."
-msgstr ""
+msgstr "Vous devez configurer le paramètre %1 de votre processeur de paiement avant de pouvoir proposer des transactions par carte de crédit."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Pledge payment status should be 'Pending' or  'Overdue'."
@@ -743,7 +744,7 @@ msgstr "Veuillez indiquer un jour valide de rappel additionnel."
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "No payment information found for this record"
-msgstr ""
+msgstr "Aucune information de paiement trouvée pour cet enregistrement"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Credit card payment is not for Refund payments use"
@@ -774,7 +775,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund amount must equal refund due amount."
-msgstr ""
+msgstr "Le montant du remboursement doit être égal au montant du remboursement dû."
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid ""
@@ -1780,7 +1781,7 @@ msgstr "Sélection requise"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "From Email Address is required"
-msgstr ""
+msgstr "Une adresse courrier d'expéditeur est requise"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid ""
@@ -1833,7 +1834,7 @@ msgstr "Générer le(s) reçu(s)"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Thank-you Letter Options"
-msgstr ""
+msgstr "Options pour la lettre de remerciement"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Update thank-you dates for these contributions"
@@ -1865,7 +1866,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Generate PDFs for printing (only)"
-msgstr ""
+msgstr "Générer des documents PDF pour imprimer (seulement)"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid ""
@@ -1918,11 +1919,11 @@ msgstr "La date de remerciement a été mise à jour pour %1 contributions."
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid "Thank you for your contribution/s"
-msgstr ""
+msgstr "Merci pour votre contribution"
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid "Please see attached"
-msgstr ""
+msgstr "Merci de voir le(s) document(s) attaché(s)"
 
 #: CRM/Contribute/Form/Task/PickProfile.php CRM/Contribute/Task.php
 msgid "Batch Update Contributions Via Profile"
@@ -2070,7 +2071,7 @@ msgstr "Charger un mappage"
 
 #: CRM/Contribute/Import/Form/MapField.php
 msgid "Missing required fields: Soft Credit"
-msgstr ""
+msgstr "Le champ obligatoire : Soft Credit, est manquant "
 
 #: CRM/Contribute/Import/Form/MapField.php
 msgid ""
@@ -2124,7 +2125,7 @@ msgstr ""
 
 #: CRM/Contribute/Info.php
 msgid "Delete contributions"
-msgstr ""
+msgstr "Supprimer la (les) contribution(s)"
 
 #: CRM/Contribute/Info.php
 msgid "Your Contribution(s)"
@@ -2371,11 +2372,11 @@ msgstr "Remarque: si le mode de paiement approprié n'est pas listé (ex: donati
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "No additional payments found for this %1 record"
-msgstr ""
+msgstr "Aucun paiement additionnel trouvé pour cet enregistrement %1"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "submit credit card payment"
-msgstr ""
+msgstr "Soumettre un paiement par carte bancaire"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Due"
@@ -2383,7 +2384,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Details"
-msgstr ""
+msgstr "Détails du remboursement"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 #: templates/CRM/Contribute/Form/Contribution.tpl
@@ -2392,7 +2393,7 @@ msgstr "Informations sur le paiement"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "The date this payment was received."
-msgstr ""
+msgstr "Date à laquelle le paiement a été reçu."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Automatically email a receipt to %1?"
@@ -2402,7 +2403,7 @@ msgstr "Automatiquement envoyer un reçu par courriel à %1 ?"
 msgid ""
 "Enter a message you want included at the beginning of the confirmation "
 "email."
-msgstr ""
+msgstr "Saisir le message que vous souhaitez insérer au début du courriel de confirmation."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Net value of the payment (Total Amount minus Fee)."
@@ -2412,7 +2413,7 @@ msgstr ""
 msgid ""
 "Click OK to save this payment record AND send a receipt to the contributor "
 "now"
-msgstr ""
+msgstr "Cliquez OK pour enregistrer ce paiement ET envoyer un reçu immédiat au contributeur"
 
 #: templates/CRM/Contribute/Form/CancelSubscription.tpl
 #: templates/CRM/Contribute/Form/UpdateBilling.tpl
@@ -2479,15 +2480,15 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1 %2s for %3 installments."
-msgstr ""
+msgstr "Je veux contribuer à hauteur de ce montant chaque %1 %2 pour %3 versements."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1 for %2 installments."
-msgstr ""
+msgstr "Je veux contribuer à hauteur de ce montant chaque %1 pour %2 versements."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1 %2s."
-msgstr ""
+msgstr "Je veux donner ce montant tous les %1 %2."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1."
@@ -2558,7 +2559,7 @@ msgstr "Votre contribution ne sera pas complétée tant que vous n'aurez pas cli
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Click here to do this for a different person."
-msgstr ""
+msgstr "Cliquez ici pour faire ceci pour quelqu'un d'autre"
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Not %1, or want to do this for a different person"
@@ -2580,7 +2581,7 @@ msgstr "prélèvements."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Your recurring contribution will be processed automatically."
-msgstr ""
+msgstr "Votre contribution périodique sera prélevée automatiquement."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid ""
@@ -2591,7 +2592,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "You will receive an email receipt for each recurring contribution."
-msgstr ""
+msgstr "Vous recevrez un reçu par courriel lors de chaque prélèvement périodique."
 
 #: templates/CRM/Contribute/Form/Contribution/MembershipBlock.tpl
 msgid "Your <strong>%2</strong> membership expired on %1."
@@ -2742,16 +2743,16 @@ msgstr "Cette contribution récurrente sera automatiquement débitée tous les %
 msgid ""
 "This recurring contribution will be automatically processed every %1 for a "
 "total %2 installments (including this initial contribution)."
-msgstr ""
+msgstr "Cette contribution périodique sera automatiquement prélevée chaque %1 pour un total de %2 versements (dont cette contribution initiale)"
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "This recurring contribution will be automatically processed every %1 %2s."
-msgstr ""
+msgstr "Cette contribution périodique sera automatiquement prélevée chaque %1 %2."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This recurring contribution will be automatically processed every %1."
-msgstr ""
+msgstr "Cette contribution périodique sera automatiquement prélevée chaque %1."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -3507,7 +3508,7 @@ msgid ""
 "href=\"%1\"><strong>Administer CiviCRM Profiles</strong></a> if you need to "
 "review, modify or create profiles (you can come back at any time to select "
 "or update the Profile(s) used for this page)."
-msgstr ""
+msgstr "Vous pouvez utiliser des profils CiviCRm existant pour votre page - OU créer un (des) profil(s) spécifique(s) pour les pages de contribution en ligne. Pour créer, modifier, consulter les profils, allez à <a href=\"%1\"><strong>Administrer profils CiviCRM</strong></a> (vous pouvez revenir, à tout moment, pour sélectionner ou mettre à jour le(s) profil(s) utilisé(s) pour cette page)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.hlp
 msgid ""
@@ -3591,7 +3592,7 @@ msgstr "Ce titre sera affiché au haut de la page de confirmation de la transact
 msgid ""
 "Enter text (and optional HTML layout) for the thank-you block that will "
 "appear at the top of the Thank-you page."
-msgstr ""
+msgstr "Entrez le texte (et l'éventuelle structure HTML) pour le paragraphe de remerciements qui apparaîtra en haut de la page de remerciements."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Thank-you Page Footer"
@@ -3608,7 +3609,7 @@ msgstr "Entrez le(s) lien(s) et le texte que vous voulez voir apparaître au bas
 msgid ""
 "NOTE: Social media links will be automatically included if you have enabled "
 "'Social media sharing' for this page (see the 'Title' tab)."
-msgstr ""
+msgstr "Note : les liens aux réseaux sociaux seront automatiquement inclus si vous avez sélectionné l'option 'Partager sur les réseaux sociaux' pour cette page (voir onglet 'Titre')."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Automatic Receipting"
@@ -3633,7 +3634,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Enter the FROM name to be used in receipt emails."
-msgstr ""
+msgstr "Entrez la valeur dans le champ FROM, à utiliser pour les courriels de reçu."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Email Address of Receipt Sender"
@@ -4045,7 +4046,7 @@ msgstr "Sélectionnez une option pour révéler les champs d'information de la  
 
 #: templates/CRM/Contribute/Form/SoftCredit.tpl
 msgid "another soft credit"
-msgstr ""
+msgstr "autre crédit indirect"
 
 #: templates/CRM/Contribute/Form/Task/Batch.tpl
 msgid ""
@@ -4867,7 +4868,7 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_recurring_edit_html.tpl
 msgid " for %1 installments"
-msgstr ""
+msgstr "pour %1 versement(s)"
 
 #: xml/templates/message_templates/contribution_recurring_edit_html.tpl
 #: xml/templates/message_templates/contribution_recurring_edit_text.tpl
@@ -4905,7 +4906,7 @@ msgstr ""
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid " for a total of %1 installment(s)"
-msgstr ""
+msgstr "pour un total de %1 versement(s)"
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 msgid ""
