--- a/po/fr_CA/campaign.po
+++ b/po/fr_CA/campaign.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # pictogram <inactive+pictogram@transifex.com>, 2013
+# pictogram <inactive+pictogram@transifex.com>, 2013
 # pictogram <pictogram69@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
@@ -12,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"PO-Revision-Date: 2016-08-29 16:58+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -97,15 +98,15 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
-msgstr ""
+msgstr "Campagne Parente"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Is Campaign Active?"
-msgstr ""
+msgstr "Est-ce que la campagne est active ?"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Created By"
-msgstr ""
+msgstr "Campagne créée par "
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/DAO/Survey.php
 msgid "Campaign Created Date"
@@ -113,11 +114,11 @@ msgstr "Date de création de la campagne"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified By"
-msgstr ""
+msgstr "Campagne modifiée par"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified Date"
-msgstr ""
+msgstr "Campagne modifiée le"
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/Form/Campaign.php
 msgid "Campaign Goals"
@@ -157,7 +158,7 @@ msgstr "Nombre de contacts par défaut"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Is Active"
-msgstr ""
+msgstr "Le sondage est ouvert"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Is Default Survey"
@@ -165,19 +166,19 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Created By"
-msgstr ""
+msgstr "Sondage créé par"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified"
-msgstr ""
+msgstr "Sondage modifié"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified On"
-msgstr ""
+msgstr "Sondage modifié le"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "No Email Verification"
-msgstr ""
+msgstr "Pas de vérification e-mail"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Edit Campaign"
@@ -272,13 +273,13 @@ msgstr "Valeur par défaut ?"
 msgid ""
 "This title is already associated with the selected activity type. Please "
 "specify a unique title."
-msgstr ""
+msgstr "Ce titre est déjà attribué au type d'activité sélectionné. Vous devez indiquer un titre unique."
 
 #: CRM/Campaign/Form/Petition.php
 msgid ""
 "This title is already associated with the selected campaign and activity "
 "type. Please specify a unique title."
-msgstr ""
+msgstr "Ce titre est déjà attribué à la campagne sélectionnée. Vous devez indiquer un titre unique."
 
 #: CRM/Campaign/Form/Petition.php
 msgid " Petition has been deleted."
@@ -484,7 +485,7 @@ msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Released"
-msgstr ""
+msgstr "Libéré"
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
@@ -552,7 +553,7 @@ msgstr[1] ""
 
 #: CRM/Campaign/Info.php
 msgid "administer CiviCampaign"
-msgstr ""
+msgstr "administrer CiviCampaign"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaign, survey and petition types and their status"
@@ -755,13 +756,13 @@ msgstr "Vous avez déjà signé cette pétition."
 msgid ""
 "You have already signed this petition but you still <b>need to verify your "
 "email address</b>."
-msgstr ""
+msgstr "Vous avez déjà signé cette pétition mais vous devez tout de même vérifier votre adresse e-mail."
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
 "Please check your email inbox for the confirmation email. If you don't find "
 "it, verify if it isn't in your spam folder."
-msgstr ""
+msgstr "Veuillez consulter votre boîte mail pour ouvrir l'email de confirmation. Si vous ne le trouvez pas, vérifiez qu'il ne se trouver pas dans votre dossier spams."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Are you sure you want to delete this Petition?"
@@ -1036,7 +1037,7 @@ msgstr "Il n'y a présentement aucune campagne active."
 msgid ""
 "If you want to associate this record with a campaign, you can <a %1>create a"
 " campaign here</a>."
-msgstr ""
+msgstr "Si vous souhaitez associer cet enregistrement à une campagne, vous pouvez <a %1>créer une campagne ici</a>."
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
 msgid ""
