--- a/po/fr_CA/extension.po
+++ b/po/fr_CA/extension.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"PO-Revision-Date: 2016-08-29 16:59+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr "Répertoire non accessible en écriture"
 msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
-msgstr ""
+msgstr "Le serveur ne peut écrire dans le répertoire cache des extensions (%1). Vous pouvez aller sur cette <a href=\"%2\">page</a> pour changer le chemin d'accès au répertoire."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -35,7 +35,7 @@ msgid ""
 "please check your webserver can make external HTTP requests or contact "
 "CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br "
 "/>"
-msgstr ""
+msgstr "Il est impossible d'accéder au répertoire CiviCRM public des extensions %1. Vérifiez que votre serveur est autorisé à faire des requêtes HTTP extérieures ou bien contactez l'équipe CiviCRM sur le <a href=\"http://forum.civicrm.org/\">forum CiviCRM</a>.<br />"
 
 #: CRM/Extension/Browser.php
 msgid "Connection Error"
@@ -70,29 +70,29 @@ msgstr "Un conteneur d'extension a été défini avec une URL vide."
 msgid ""
 "Failed to determine URL for extension (%1). Please update <a "
 "href=\"%2\">Resource URLs</a>."
-msgstr ""
+msgstr "N'a pas réussi à déterminer l'url pour l'extension (%1). Veuillez mettre à jour les <a href=\"%2\">urls source</a>."
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Erreur d'analyse -Parse error - dans l'extension: %1."
 
 #: CRM/Extension/Container/Default.php
 msgid ""
 "The extensions directory is not properly set. Please go to the <a "
 "href=\"%1\">path setting page</a> and correct it.<br/>"
-msgstr ""
+msgstr "Le répertoire des extensions n'est pas correctement paramétré. Vous pouvez aller sur cette <a href=\"%1\">page</a> pour le corriger."
 
 #: CRM/Extension/Container/Default.php
 msgid ""
 "The extensions URL is not properly set. Please go to the <a href=\"%1\">URL "
 "setting page</a> and correct it.<br/>"
-msgstr ""
+msgstr "Le chemin d'accès aux extensions n'est pas correctement paramétré.  Vous pouvez aller sur cette <a href=\"%1\">page</a> pour le changer."
 
 #: CRM/Extension/Downloader.php
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "Vous n'avez pas défini le répertoire pour les extensions ou il est impossible d'y écrire. Cliquez <a href='%1'>ici</a> pour le définir."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
@@ -103,22 +103,22 @@ msgid ""
 "You will not be able to install extensions at this time because your "
 "installation of PHP does not support ZIP archives. Please ask your system "
 "administrator to install the standard PHP-ZIP extension."
-msgstr ""
+msgstr "Vous ne pouvez pas installer d'extension actuellement parce que votre installation de PHP ne permet pas de traiter les archives ZIP. Vous devez demander à votre administrateur système d'installer l'extension standard PHP-ZIP."
 
 #: CRM/Extension/Downloader.php
 msgid ""
 "WARNING: The downloader may be unable to download files which require HTTP "
 "redirection. This may be a configuration issue with PHP's open_basedir or "
 "safe_mode."
-msgstr ""
+msgstr "ATTENTION : l'installateur est peut-être incapable de télécharger les documents qui nécessitent une redirection HTTP. Cela peut être dû à un problème de configuration PHP avec open_basedir ou safe_mode."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
-msgstr ""
+msgstr "Impossible d'extraire l'extension: mauvaise structure du répertoire"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: %1 cannot be cleared"
-msgstr ""
+msgstr "Impossible d'extraire l'extension : %1 ne peut être effacé"
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
@@ -134,7 +134,7 @@ msgstr "Impossible d'extraire l'extension"
 
 #: CRM/Extension/Downloader.php
 msgid "Failed reading data from %1 during installation"
-msgstr ""
+msgstr "N'a pas réussi à lire les données de %1 pendant l'installation"
 
 #: CRM/Extension/Manager/Payment.php
 msgid "Failed to load file (%3) for payment processor (%1) while running \"%2\""
@@ -154,7 +154,7 @@ msgstr " Appel de paiement non reconnu (%1) dans %2::%3"
 msgid ""
 "A copy of the extension (%1) is in a system folder (%2). The system copy "
 "will be preserved, but the new copy will be used."
-msgstr ""
+msgstr "Une copie de l'extension (%1) est dans un dossier système (%2). La copie système sera conservée, mais une nouvelle copie sera utilisée."
 
 #: CRM/Extension/Manager.php
 msgid "Selected option value has been deleted."
