--- a/po/fr_CA/report.po
+++ b/po/fr_CA/report.po
@@ -9,15 +9,15 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # samuelsov <samuel@koumbit.org>, 2016
 # samuelsov <samuel@koumbit.org>, 2012
-# samuelsov <samuel@koumbit.org>, 2012
+# samuelsov <samuel@koumbit.org>, 2012,2016
 # Stéphane Lussier <stephane@koumbit.org>, 2011
 # Stéphane Lussier <stephane@symbiotic.coop>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 19:20+0000\n"
-"Last-Translator: samuelsov <samuel@koumbit.org>\n"
+"PO-Revision-Date: 2016-08-29 17:23+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,43 +27,43 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance ID"
-msgstr "ID du compte rendu"
+msgstr "ID de l'instance de rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Domain ID"
-msgstr "ID du domaine du compte rendu"
+msgstr "ID du domaine de l'instance du rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Title"
-msgstr "Titre du type de rapport"
+msgstr "Titre de l'instance du rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report template ID"
-msgstr "ID du modèle de compte rendu"
+msgstr "ID du modèle de rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report instance Name"
-msgstr "Nom du compte rendu"
+msgstr "Nom de l'instance du rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Arguments"
-msgstr "Arguments du compte rendu"
+msgstr "Arguments de l'instance du rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance description"
-msgstr "Description du compte rendu"
+msgstr "Description de l'instance du rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Permissions"
-msgstr "Permissions d'accès du compte rendu"
+msgstr "Permissions d'accès de l'instance du rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Assigned to Roles"
-msgstr "Compte rendu sur les roles assignés"
+msgstr "Instances de rapports assignés aux rôles"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance is Active"
-msgstr "Compte rendu est actif"
+msgstr "L'instance de rapport est active"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Created By"
@@ -71,7 +71,7 @@ msgstr "Instance de rapport créé par"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Owned By"
-msgstr "Propritaire de l'instance de rapport"
+msgstr "Propriétaire de l'instance de rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance email Subject"
@@ -79,7 +79,7 @@ msgstr "Sujet du courriel pour l'envoi du rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Email Report Instance To"
-msgstr "Destinataire du compte rendu"
+msgstr "Destinataire de l'instance de rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "cc Email Report Instance To"
@@ -87,23 +87,23 @@ msgstr "Destinataire en copie"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Header"
-msgstr "Entête du compte rendu"
+msgstr "Entête de l'instance de rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Footer"
-msgstr "Pied de page du compte rendu"
+msgstr "Pied de page de l'instance de rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Drilldown Report ID"
-msgstr "ID du compte rendu \"Analyse en profondeur\""
+msgstr "ID du rapport \"Analyse en profondeur\""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Instance is Reserved"
-msgstr "Le compte rendu est réservé"
+msgstr "L'instance de rapport est réservée"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Contact Name"
-msgstr "Nom du contact Source"
+msgstr "Nom du contact source"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Contact Name"
@@ -131,16 +131,16 @@ msgstr "Courriel du contact cible"
 
 #: CRM/Report/Form/Activity.php
 msgid "Include Case Activities"
-msgstr "Inclure toutes les activités de dossier"
+msgstr "Inclure les activités de dossiers"
 
 #: CRM/Report/Form/Activity.php
 msgid "Current filter criteria didn't have any target contact to add to group"
-msgstr "Le critère de recherche sélectionné ne permet d'ajouter des contacts dans le groupe"
+msgstr "Le critère de recherche sélectionné ne permet pas d'ajouter des contacts dans le groupe."
 
 #: CRM/Report/Form/Activity.php CRM/Report/Form/Contribute/TopDonor.php
 #: CRM/Report/Form.php
 msgid "Listed contact(s) have been added to the selected group."
-msgstr "Le(s) contact(s) de la liste ont été ajoutée au groupe sélectionné."
+msgstr "Les contacts de la liste ont été ajoutés au groupe sélectionné."
 
 #: CRM/Report/Form/Activity.php CRM/Report/Form/Contribute/TopDonor.php
 #: CRM/Report/Form.php
@@ -154,7 +154,7 @@ msgstr "Les enregistrements listés ne peuvent être ajoutés au groupe."
 #: CRM/Report/Form/Activity.php
 msgid ""
 "Please enable 'Include Case Activities' to filter with Case Activity types."
-msgstr "Merce d'activer le filtre 'Inclure les activités de dossier' avec les types d'activité de dossier"
+msgstr "Veuillez cocher le filtre « Inclure les activités de dossier » pour filtrer les types d'activités de dossiers."
 
 #: CRM/Report/Form/Activity.php CRM/Report/Form/ActivitySummary.php
 #: CRM/Report/Form/Case/Detail.php CRM/Report/Form/Contact/Detail.php
@@ -171,7 +171,7 @@ msgstr "Durée totale"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Activity Count"
-msgstr "Nombre d'activité"
+msgstr "Nombre d'activités"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Please select GroupBy 'Contact' to display Contact Fields"
@@ -215,15 +215,15 @@ msgstr "Date de naissance"
 
 #: CRM/Report/Form/Case/Demographics.php
 msgid "Case Start"
-msgstr "Date de début du projet"
+msgstr "Date de début du dossier"
 
 #: CRM/Report/Form/Case/Demographics.php
 msgid "Case End"
-msgstr "Date de fin du projet"
+msgstr "Date de fin du dossier"
 
 #: CRM/Report/Form/Case/Demographics.php CRM/Report/Form/Case/TimeSpent.php
 msgid "Cases?"
-msgstr "Projets?"
+msgstr "Dossiers ?"
 
 #: CRM/Report/Form/Case/Demographics.php CRM/Report/Form/Case/TimeSpent.php
 msgid "Exclude non-case"
@@ -231,7 +231,7 @@ msgstr "Exclure les non-dossiers"
 
 #: CRM/Report/Form/Case/Demographics.php CRM/Report/Form/Case/TimeSpent.php
 msgid "Exclude cases"
-msgstr "Exclure les projets"
+msgstr "Exclure les dossiers"
 
 #: CRM/Report/Form/Case/Demographics.php CRM/Report/Form/Case/TimeSpent.php
 msgid "Include Both"
@@ -242,15 +242,15 @@ msgstr "Inclure les deux"
 #: CRM/Report/Form/Mailing/Clicks.php CRM/Report/Form/Mailing/Detail.php
 #: CRM/Report/Form/Mailing/Opened.php CRM/Report/Form/Mailing/Summary.php
 msgid "View Contact details for this contact."
-msgstr "Voir les détails du contact"
+msgstr "Voir les détails de ce contact"
 
 #: CRM/Report/Form/Case/Detail.php CRM/Report/Form/Case/Summary.php
 msgid "Deleted?"
-msgstr "Supprimer ?"
+msgstr "Supprimé ?"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Case Role(s)"
-msgstr "Rôle(s) dans le dossier"
+msgstr "Rôles dans le dossier"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Last Action Date"
@@ -274,11 +274,11 @@ msgstr "Liste des dates des activités de type"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Total Number of Cases "
-msgstr "Nombre Total de Cas"
+msgstr "Nombre total de dossiers"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Total Number of Countries "
-msgstr "Nombre Total de Pays"
+msgstr "Nombre total de pays"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "View Details of Case."
@@ -2119,11 +2119,11 @@ msgstr "Durée totale (en minutes)"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "List all activity(s) for this row."
-msgstr ""
+msgstr "Afficher toutes les activités pour cette ligne."
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Extra information to control grouping"
-msgstr ""
+msgstr "Information supplémentaire pour contrôler les groupements"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Contact Merge"
@@ -2215,15 +2215,15 @@ msgstr "Taux d'ouverture"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Open Rate"
-msgstr ""
+msgstr "Taux d'ouvertures uniques"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "View Mailing details for this mailing"
-msgstr ""
+msgstr "Afficher les détails de cet envoi"
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "Développeur"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
