po: update po/fr_CA/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/financial.po
+++ b/po/fr_CA/financial.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"PO-Revision-Date: 2016-08-29 16:59+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Record:"
-msgstr ""
+msgstr "Enregistrement :"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
@@ -59,7 +59,7 @@ msgstr "Ce contact (s) ne peut pas être supprimé de manière permanente parce 
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
-msgstr ""
+msgstr "Les tables suivantes ont une entrée pour ce type d'opération: 1%"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
@@ -79,29 +79,29 @@ msgstr "Vous ne pouvez pas supprimer un compte avec une relation « %1 » car il
 msgid ""
 "Unbalanced transactions may be created if you delete the account of type: "
 "%1."
-msgstr ""
+msgstr "Des transactions non équilibrées peuvent être générées si vous supprimez le compte de type %1."
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Invalid value passed to getPayment function"
-msgstr ""
+msgstr "La valeur passée à la fonction getPayment est invalide "
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Could not retrieve payment processor details"
-msgstr ""
+msgstr "Impossible de récupérer les paramètres de la passerelle de paiement"
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid ""
 "There is a Payment Processor associated with selected Payment Processor "
 "type, hence it can not be deleted."
-msgstr ""
+msgstr "Il y a une passerelle de paiement associée avec le type de passerelle de paiement sélectionné, il ne peut donc pas être supprimé."
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br/>"
-msgstr ""
+msgstr "Le type de processeur de paiement sélectionné a été supprimé.<br/>"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Symbol"
-msgstr ""
+msgstr "Symbole"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Numeric Code"
@@ -113,15 +113,15 @@ msgstr ""
 
 #: CRM/Financial/DAO/EntityFinancialTrxn.php
 msgid "Financial Transaction Id"
-msgstr ""
+msgstr "Identification de Transaction Financière"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
-msgstr ""
+msgstr "Identification de Compte Financier"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Name"
-msgstr ""
+msgstr "Nom de Compte Financier"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
@@ -136,7 +136,7 @@ msgstr "Code de type de compte"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Description"
-msgstr ""
+msgstr "Description du Compte Financier"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Parent"
@@ -148,7 +148,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Deductible Financial Account?"
-msgstr ""
+msgstr "Compte Financier Déductible"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Tax Financial Account?"
@@ -164,15 +164,15 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account is Active"
-msgstr ""
+msgstr "Compte Financier est Actif"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Default Financial Account"
-msgstr ""
+msgstr "Compte Financier par Défaut"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
-msgstr ""
+msgstr "Identification de Transaction Financière"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction From Account"
@@ -184,11 +184,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Date"
-msgstr ""
+msgstr "Date de Transaction Financière"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Total Amount"
-msgstr ""
+msgstr "Montant Total Financier"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Fee Amount"
@@ -196,11 +196,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Net Amount"
-msgstr ""
+msgstr "Montant Net Financier"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Currency"
-msgstr ""
+msgstr "Devise Financière"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Transaction Result Code"
@@ -208,11 +208,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Status Id"
-msgstr ""
+msgstr "id de statut de transaction financière"
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Is Tax Deductible?"
-msgstr ""
+msgstr "La taxe est-elle déductible ?"
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type is Reserved?"
@@ -232,7 +232,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Description"
-msgstr ""
+msgstr "Description du processeur"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
@@ -254,7 +254,7 @@ msgstr ""
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP clas name implementation"
-msgstr ""
+msgstr "Suffix for PHP clas name implementation"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Billing Mode"
@@ -262,19 +262,19 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Supports Recurring?"
-msgstr ""
+msgstr "Le processeur supporte t'il la périodicité ?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor variable name to be used in code"
-msgstr ""
+msgstr "Nom de variable de la passerelle de paiement à utiliser dans le code"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor Title"
-msgstr ""
+msgstr "Titre de la passerelle de paiement"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Description"
-msgstr ""
+msgstr "Description du type de processeur"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Is Active?"
@@ -282,59 +282,59 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type is Default?"
-msgstr ""
+msgstr "Type de processeur par défaut ?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for User Name if used"
-msgstr ""
+msgstr "Libellé du nom d'utilisateur si nécessaire"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for password"
-msgstr ""
+msgstr "Libellé pour le mot de passe"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Signature"
-msgstr ""
+msgstr "Libellé pour la signature"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Subject"
-msgstr ""
+msgstr "Libellé pour le sujet"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Site URL"
-msgstr ""
+msgstr "URL par défaut pour le site réel"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default API Site URL"
-msgstr ""
+msgstr "URL par défaut pour l'API du site"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Recurring Payments URL"
-msgstr ""
+msgstr "URL par défaut pour les paiements périodiques réels"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Button URL"
-msgstr ""
+msgstr "URL par défaut pour le bouton réel"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Site URL"
-msgstr ""
+msgstr "URL par défaut du site de test"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test API URL"
-msgstr ""
+msgstr "URL par défaut pour le test de l'API"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Recurring Payment URL"
-msgstr ""
+msgstr "URL par défaut pour le test de paiement périodique"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Button URL"
-msgstr ""
+msgstr "URL par défaut pour le test du bouton"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Supports Recurring?"
-msgstr ""
+msgstr "Le type de processeur supporte t'il la périodicité ?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Payment Type"
@@ -346,7 +346,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Expiry Date"
-msgstr ""
+msgstr "Date d'expiration"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Masked Account Number"
@@ -354,7 +354,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "IP Address"
-msgstr ""
+msgstr "Adresse IP"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Accounting Batch - %1"
@@ -382,11 +382,11 @@ msgstr "Exporter et fermer lot"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "Task"
-msgstr ""
+msgstr "Tâche"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "- actions -"
-msgstr ""
+msgstr "- actions - "
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -444,7 +444,7 @@ msgstr ""
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Please enter value for tax rate"
-msgstr ""
+msgstr "Saisir la valeur du taux de taxe"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Tax Rate Should be between 0 - 100"
@@ -477,7 +477,7 @@ msgstr "Nombre de Transactions"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Please select a valid contact."
-msgstr ""
+msgstr "Sélectionnez un contact valide."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Number of Transactions should a positive number"
@@ -694,7 +694,7 @@ msgstr ""
 msgid ""
 "The default rate used to calculate the taxes collected into this account "
 "(e.g. for tax rate of 8.27%, enter 8.27)."
-msgstr ""
+msgstr "Le taux par défaut utilisé pour calculer les taxes collectées pour ce compte (par exemple, pour un taux à 20,6%, saisir 20,6)."
 
 #: templates/CRM/Financial/Form/FinancialAccount.tpl
 msgid ""
@@ -940,7 +940,7 @@ msgstr "Il n'y a pas de comptes financiers attribué à ce type financier. Vous 
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Method:"
-msgstr ""
+msgstr "Méthode de Paiement : "
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
