--- a/po/fr_CA/grant.po
+++ b/po/fr_CA/grant.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"PO-Revision-Date: 2016-08-29 16:58+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -91,11 +91,11 @@ msgstr "Montant octroyé"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Currency"
-msgstr ""
+msgstr "Devise de la subvention"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Rationale"
-msgstr ""
+msgstr "Raison de la subvention"
 
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
@@ -107,7 +107,7 @@ msgstr "Montant requis<br />(devise initiale)"
 
 #: CRM/Grant/Form/Grant.php
 msgid "Applicant"
-msgstr ""
+msgstr "Candidat"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -120,8 +120,8 @@ msgstr "Supprimer les subventions"
 #: CRM/Grant/Form/Task/Delete.php
 msgid "%count grant deleted."
 msgid_plural "%count grants deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count subventions ont été supprimés."
+msgstr[1] "%count subventions ont été supprimés."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -133,31 +133,31 @@ msgstr "Mettre à jour les subventions"
 
 #: CRM/Grant/Form/Task/Update.php
 msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr ""
+msgstr "Subvention(s) mise(s) à jour : %1 (Nombre total sélectionné: %2)"
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
-msgstr ""
+msgstr "accéder à CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "View all grants"
-msgstr ""
+msgstr "Voir toutes les subventions"
 
 #: CRM/Grant/Info.php
 msgid "edit grants"
-msgstr ""
+msgstr "Modifier les subventions"
 
 #: CRM/Grant/Info.php
 msgid "Create and update grants"
-msgstr ""
+msgstr "Créer et mettre à jour les subventions"
 
 #: CRM/Grant/Info.php
 msgid "delete in CiviGrant"
-msgstr ""
+msgstr "supprimer dans CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "Delete grants"
-msgstr ""
+msgstr "Supprimer les subventions"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
@@ -181,7 +181,7 @@ msgstr "Sollicité"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Granted"
-msgstr ""
+msgstr "Accepté"
 
 #: CRM/Grant/Task.php
 msgid "Export Grants"
@@ -209,11 +209,11 @@ msgstr "(devise initiale)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Status(s)"
-msgstr ""
+msgstr "Statut(s) de la subvention"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
-msgstr ""
+msgstr "Type(s) de subvention"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -308,7 +308,7 @@ msgstr "Cette page liste toutes les subventions pour %1 depuis le début."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr ""
+msgstr "Cliquez <a %1>Nouvelle subvention</a> afin d'enregistrer une subvention pour ce contact."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
