po: update po/fr_CA/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/mailing.po
+++ b/po/fr_CA/mailing.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-13 18:00+0000\n"
-"Last-Translator: samuelsov <samuel@koumbit.org>\n"
+"PO-Revision-Date: 2016-08-29 16:58+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -179,7 +179,7 @@ msgstr "Seuil de retenue"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component ID"
-msgstr ""
+msgstr "ID du composant de publipostage"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Component Name"
@@ -187,11 +187,11 @@ msgstr "Nom de l'élément"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component Type"
-msgstr ""
+msgstr "Type de composant de publipostage"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component Body HTML"
-msgstr ""
+msgstr "Corps HTML du composant de publipostage"
 
 #: CRM/Mailing/DAO/Component.php CRM/Mailing/DAO/Mailing.php
 #: templates/CRM/Mailing/Page/Component.tpl
@@ -200,11 +200,11 @@ msgstr "Contenu"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component is Default?"
-msgstr ""
+msgstr "Est-ce le composant de publipostage par défaut ?"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component Is Active?"
-msgstr ""
+msgstr "Est-ce que le composant de publipostage est activé ?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Domain"
@@ -212,19 +212,19 @@ msgstr "Domaine de l'envoi"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Reply"
-msgstr ""
+msgstr "Répondre au mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Unsubscribe"
-msgstr ""
+msgstr "Se désabonner du mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Resubscribe"
-msgstr ""
+msgstr "Se réabonner au mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Opt Out"
-msgstr ""
+msgstr "Refuser le mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Type"
@@ -261,11 +261,11 @@ msgstr "Réponse automatique"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Track Mailing?"
-msgstr ""
+msgstr "Suivre le mailing ?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Completed"
-msgstr ""
+msgstr "Mailing terminé"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Message Template"
@@ -314,15 +314,15 @@ msgstr "Visibilité de l'envoi"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Campaign"
-msgstr ""
+msgstr "Campagne d'emailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "No Duplicate emails?"
-msgstr ""
+msgstr "Il n'y a pas de d'adresses courriels en double ?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing SMS Provider"
-msgstr ""
+msgstr "Fournisseur Service d'envoi par SMS"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Hash"
@@ -350,7 +350,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Testing Criteria"
-msgstr ""
+msgstr "Critères de test"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Winner Criteria"
@@ -370,19 +370,19 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created By"
-msgstr ""
+msgstr "Test AB créé par"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created Date"
-msgstr ""
+msgstr "Date de création du test AB"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group ID"
-msgstr ""
+msgstr "ID du groupe de mailing"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Type"
-msgstr ""
+msgstr "Type de groupe du mailing"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group Entity Table"
@@ -402,7 +402,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job ID"
-msgstr ""
+msgstr "ID de la tâche de mailing"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Start Date"
@@ -446,7 +446,7 @@ msgstr "Adresse courriel du destinataire"
 
 #: CRM/Mailing/DAO/Recipients.php
 msgid "Recipient Phone"
-msgstr ""
+msgstr "Numéro de téléphone du destinataire"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Headers"
@@ -638,11 +638,11 @@ msgstr "Groupe de désinscription"
 
 #: CRM/Mailing/Form/Group.php
 msgid "INCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "INCLURE les destinataires de ce ou ces mailing(s)"
 
 #: CRM/Mailing/Form/Group.php
 msgid "EXCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "EXCLURE les destinataires de ce ou ces mailing(s)"
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Settings.php
 #: CRM/Mailing/Form/Test.php CRM/Mailing/Form/Upload.php
@@ -898,7 +898,7 @@ msgstr "Contenu du publipostage"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail"
-msgstr ""
+msgstr "accéder à CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail subscribe/unsubscribe pages"
@@ -910,7 +910,7 @@ msgstr "Modifier son abonnement au groupe de diffusion"
 
 #: CRM/Mailing/Info.php
 msgid "delete in CiviMail"
-msgstr ""
+msgstr "supprimer dans CiviMail"
 
 #: CRM/Mailing/Info.php CRM/Mailing/Page/Browse.php
 #: CRM/Mailing/Selector/Browse.php
@@ -923,15 +923,15 @@ msgstr ""
 
 #: CRM/Mailing/Info.php
 msgid "create mailings"
-msgstr ""
+msgstr "créer les mailings"
 
 #: CRM/Mailing/Info.php
 msgid "schedule mailings"
-msgstr ""
+msgstr "planifier les mailings"
 
 #: CRM/Mailing/Info.php
 msgid "approve mailings"
-msgstr ""
+msgstr "valider les mailings"
 
 #: CRM/Mailing/Page/Browse.php CRM/Mailing/Selector/Browse.php
 msgid "Cancel Mailing"
@@ -1004,15 +1004,15 @@ msgstr ""
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test different \"Subject\" lines"
-msgstr ""
+msgstr "Tester des lignes \"Sujet\" différentes"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test different \"From\" lines"
-msgstr ""
+msgstr "Tester des lignes \"Expéditeur\" différentes"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test entirely different emails"
-msgstr ""
+msgstr "Tester des e-mails totalement différents"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Total Unique Clicks"
@@ -1177,7 +1177,7 @@ msgstr "Adresse courriel"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
-msgstr ""
+msgstr "Groupe de désabonnement"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
@@ -1197,7 +1197,7 @@ msgstr "Envoyer un courriel test à :"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
-msgstr ""
+msgstr "Courriel de test"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
@@ -1237,7 +1237,7 @@ msgstr "Aperçu de la liste de destinataires"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Edit Recipient Options"
-msgstr ""
+msgstr "Modifier les options des destinataires"
 
 #: ang/crmMailing/BlockResponses.html ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/EditCtrl/report.html
@@ -1311,7 +1311,7 @@ msgstr "Envoyé à :"
 
 #: ang/crmMailing/BlockSummary.html ang/crmMailingAB/BlockSetup.html
 msgid "Select Campaign"
-msgstr ""
+msgstr "Sélectionnez une campagne"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
@@ -1331,7 +1331,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "This mailing has been submitted."
-msgstr ""
+msgstr "Ce publipostage a été soumis."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
@@ -1381,7 +1381,7 @@ msgstr "Supprimer le brouillon"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Are you sure you want to permanently delete this mailing?"
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir supprimer définitivement ce publipostage ?"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1427,11 +1427,11 @@ msgstr "Aperçu (%1)"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
-msgstr ""
+msgstr "Dédoublonner selon l'email"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Selection Method"
-msgstr ""
+msgstr "Méthode de sélection"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
@@ -1565,11 +1565,11 @@ msgstr "Chargement..."
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (A)"
-msgstr ""
+msgstr "Modèle (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (B)"
-msgstr ""
+msgstr "Modèle (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (A)"
@@ -1604,7 +1604,7 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html ang/crmMailingAB/ListCtrl.html
 msgid "Test Type"
-msgstr ""
+msgstr "Type de test"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Distribution"
@@ -1616,11 +1616,11 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test immediately"
-msgstr ""
+msgstr "Envoyer le test A/B directement"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test at:"
-msgstr ""
+msgstr "Envoyer le test A/B à : "
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess"
@@ -1711,7 +1711,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "n/a"
-msgstr ""
+msgstr "n/a"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for  '%1'"
@@ -1727,11 +1727,11 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test A (%1)"
-msgstr ""
+msgstr "Test A (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test B (%1)"
-msgstr ""
+msgstr "Test B (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Final (%1)"
@@ -1743,11 +1743,11 @@ msgstr ""
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Status -"
-msgstr ""
+msgstr "- Statut -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Test Type -"
-msgstr ""
+msgstr "- Type de test -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "You have no A/B mailings"
@@ -1755,27 +1755,27 @@ msgstr ""
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "New A/B Test"
-msgstr ""
+msgstr "Nouveau test A/B"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing A"
-msgstr ""
+msgstr "Publipostage A"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing B"
-msgstr ""
+msgstr "Publipostage B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing A"
-msgstr ""
+msgstr "Publipostage de test A"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing B"
-msgstr ""
+msgstr "Publipostage de test B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Final Mailing"
-msgstr ""
+msgstr "Publipostage final"
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid ""
@@ -1785,15 +1785,15 @@ msgstr ""
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid "Send final mailing immediately"
-msgstr ""
+msgstr "Envoyer le publipostage final directement"
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid "Send final mailing at:"
-msgstr ""
+msgstr "Envoyer le publipostage final à : "
 
 #: ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Submit final mailing"
-msgstr ""
+msgstr "Envoyer le publipostage final"
 
 #: templates/CRM/Mailing/Form/Approve.tpl
 #: templates/CRM/Mailing/Form/Schedule.tpl templates/CRM/Mailing/Form/Test.tpl
