--- a/po/fr_CA/pledge.po
+++ b/po/fr_CA/pledge.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 16:19+0000\n"
+"PO-Revision-Date: 2016-08-29 16:58+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -96,7 +96,7 @@ msgstr "Page finances - %1"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Contact ID %1 %2"
-msgstr ""
+msgstr "Identifiant de contact %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -297,7 +297,7 @@ msgstr "Nom ou adresse électronique de la personne faisant la promesse"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name"
-msgstr ""
+msgstr "Nom de la personne faisant l'engagement de don"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
