--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-13 17:45+0000\n"
-"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
+"PO-Revision-Date: 2016-08-29 16:58+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -157,7 +157,7 @@ msgstr "Assigner à un autre client"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "Fichier dans le Dossier"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -1112,7 +1112,7 @@ msgstr "Enregistrement en ligne à l'événement"
 
 msgctxt "menu"
 msgid "Repeat Event"
-msgstr ""
+msgstr "Evènement récurrent"
 
 msgctxt "menu"
 msgid "Conference Slots"
@@ -1706,12 +1706,12 @@ msgstr "Tous les rapports"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Support"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Pour démarrer"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1721,12 +1721,12 @@ msgstr "Documentation"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Poser une question"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Obtenir l'aide d'un expert"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1736,12 +1736,12 @@ msgstr "À propos de CiviCRM"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Enregistrer votre site"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Rejoindre CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
